--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  oracle-18-xe:
+  oracle-18c-xe:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -29,3 +29,24 @@ jobs:
         run: |
           ./buildContainerImage.sh -t dkmoonfruit/oracle:18.4.0-xe -v 18.4.0 -x
           docker push dkmoonfruit/oracle:18.4.0-xe
+
+  oracle-18c-xe-prebuilt:
+    runs-on: ubuntu-latest
+    needs: oracle-18c-xe
+    steps:
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: oracle-18c-xe/Dockerfile
+          tags: dkmoonfruit/oracle:18.4.0-xe-prebuilt
