--- a/oracle-18c-xe/Dockerfile
+++ b/oracle-18c-xe/Dockerfile
@@ -1,7 +1,8 @@
 FROM dkmoonfruit/oracle:18.4.0-xe
 
 ENV ORACLE_PWD=oracle \
-    ORACLE_CHARACTERSET=AL32UTF8
+    ORACLE_CHARACTERSET=AL32UTF8 \
+    INSTALL_DIR="$HOME/install"
 
 COPY initOracle.patch $INSTALL_DIR/
 RUN yum -y install patch && \
