--- a/oracle-18c-xe/Dockerfile
+++ b/oracle-18c-xe/Dockerfile
@@ -13,7 +13,7 @@ RUN yum -y install patch && \
     rm -rf /var/tmp/yum-*
 
 RUN $INSTALL_DIR/initOracle.sh && \
-    systemctl stop oracle-xe-18c && \
+    /etc/init.d/oracle-xe-18c stop && \
     rm -rf $INSTALL_DIR
 
 CMD exec $ORACLE_BASE/$RUN_FILE
