--- a/.github/workflows/oracle-18c-xe.yml
+++ b/.github/workflows/oracle-18c-xe.yml
@@ -1,9 +1,6 @@
-name: Docker Images CI
+name: Oracle 18c XE
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
@@ -34,6 +31,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: oracle-18c-xe
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -48,5 +48,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          file: oracle-18c-xe/Dockerfile
+          context: ./oracle-18c-xe
           tags: dkmoonfruit/oracle:18.4.0-xe-prebuilt
