--- a/.github/workflows/oracle-18c-xe.yml
+++ b/.github/workflows/oracle-18c-xe.yml
@@ -33,6 +33,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -42,6 +44,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Generate initOracle.sh
+        working-directory: ./oracle-18c-xe
+        run: |
+          cp ../oracle-images/OracleDatabase/SingleInstance/dockerfiles/18.4.0/runOracle.sh initOracle.sh
+          patch initOracle.sh < initOracle.patch
 
       - name: Build and Push
         id: docker_build
