Build oracle images aginst gvenzl/oracle-xe

--- a/oracle-18c-xe/Dockerfile
+++ b/oracle-18c-xe/Dockerfile
@@ -1,17 +1,20 @@
-FROM dkmoonfruit/oracle:18.4.0-xe
+FROM gvenzl/oracle-xe:18.4.0-slim
 
-ENV ORACLE_PWD=oracle \
-    ORACLE_CHARACTERSET=AL32UTF8
+ENV ORACLE_PASSWORD=test \
+    APP_USER=test \
+    APP_USER_PASSWORD=test
 
-COPY initOracle.patch $INSTALL_DIR/
-RUN yum -y install patch && \
-    cp $ORACLE_BASE/$RUN_FILE $INSTALL_DIR/initOracle.sh && \
-    patch $INSTALL_DIR/initOracle.sh < $INSTALL_DIR/initOracle.patch && \
-    yum -y erase patch && \
-    rm -rf /var/cache/yum && \
-    rm -rf /var/tmp/yum-*
+COPY container-initialize.patch /install/
 
-RUN $INSTALL_DIR/initOracle.sh && \
-    rm -rf $INSTALL_DIR
+USER root
+RUN cp ${ORACLE_BASE}/container-entrypoint.sh /install/container-initialize.sh && \
+    microdnf -y install patch && \
+    patch /install/container-initialize.sh < /install/container-initialize.patch
 
-CMD exec $ORACLE_BASE/$RUN_FILE
+# RUN /install/container-initialize.sh && \
+# rm -r /install/
+
+RUN microdnf -y remove patch && \
+    mocrodnf clean all
+
+USER oracle
