--- a/.github/workflows/oracle-18c-xe.yml
+++ b/.github/workflows/oracle-18c-xe.yml
@@ -9,30 +9,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          submodules: true
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Build and Push
-        working-directory: ./oracle-images/OracleDatabase/SingleInstance/dockerfiles
-        run: |
-          ./buildContainerImage.sh -t dkmoonfruit/oracle:18.4.0-xe -v 18.4.0 -x
-          docker push dkmoonfruit/oracle:18.4.0-xe
-
-  oracle-18c-xe-prebuilt:
-    runs-on: ubuntu-latest
-    needs: oracle-18c-xe
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -49,4 +25,4 @@ jobs:
         with:
           push: true
           context: ./oracle-18c-xe
-          tags: dkmoonfruit/oracle:18.4.0-xe-prebuilt
+          tags: dkmoonfruit/oracle:18.4.0-slim
