Run container-initialize.sh

--- a/oracle-18c-xe/Dockerfile
+++ b/oracle-18c-xe/Dockerfile
@@ -9,12 +9,11 @@ COPY container-initialize.patch /install/
 USER root
 RUN cp ${ORACLE_BASE}/container-entrypoint.sh /install/container-initialize.sh && \
     microdnf -y install patch && \
-    patch /install/container-initialize.sh < /install/container-initialize.patch
-
-# RUN /install/container-initialize.sh && \
-# rm -r /install/
-
-RUN microdnf -y remove patch && \
-    microdnf clean all
+    patch /install/container-initialize.sh < /install/container-initialize.patch && \
+    microdnf -y remove patch && \
+    microdnf clean all && \
+    chown -R oracle:dba /install/
 
 USER oracle
+RUN /install/container-initialize.sh && \
+    rm -r /install/
