--- a/oracle-18c-xe/Dockerfile
+++ b/oracle-18c-xe/Dockerfile
@@ -6,14 +6,10 @@ ENV ORACLE_PASSWORD=test \
 
 COPY container-initialize.patch /install/
 
-USER root
 RUN cp ${ORACLE_BASE}/container-entrypoint.sh /install/container-initialize.sh && \
     microdnf -y install patch && \
     patch /install/container-initialize.sh < /install/container-initialize.patch && \
     microdnf -y remove patch && \
     microdnf clean all && \
-    chown -R oracle:dba /install/
-
-USER oracle
-RUN /install/container-initialize.sh && \
-    rm -r /install/
+    /install/container-initialize.sh && \
+    rm -f /install
