--- a/oracle-18c-xe/Dockerfile
+++ b/oracle-18c-xe/Dockerfile
@@ -4,12 +4,11 @@ ENV ORACLE_PASSWORD=test \
     APP_USER=test \
     APP_USER_PASSWORD=test
 
-COPY container-initialize.patch /install/
-
-RUN cp ${ORACLE_BASE}/container-entrypoint.sh /install/container-initialize.sh && \
+COPY container-initialize.patch ${ORACLE_BASE}
+RUN cp container-entrypoint.sh container-initialize.sh && \
     microdnf -y install patch && \
-    patch /install/container-initialize.sh < /install/container-initialize.patch && \
+    patch container-initialize.sh < container-initialize.patch && \
     microdnf -y remove patch && \
     microdnf clean all && \
-    /install/container-initialize.sh && \
-    rm -f /install
+    container-initialize.sh && \
+    rm -fr container-initialize.*
